# TripoSG

./: pyproject.toml
triposg/pipelines/: pipeline_triposg.py
triposg/scripts/: inference_triposg.py
