[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "triposg"
version = "0.1"
description = "TripoSG package"
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools]
# Map source dirs to installed package names
package-dir = { "triposg" = "triposg", "triposg.scripts" = "scripts" }

[tool.setuptools.packages.find]
# Find both the base package and its subpackages
include = ["triposg", "triposg.*"]
