[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "triposg"
version = "0.1"
description = "TripoSG package"
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools]
package-dir = { "triposg" = "triposg", "triposg.scripts" = "scripts" }

[tool.setuptools.packages.find]
include = ["triposg", "triposg.scripts"]